		-[Integration.Web] The PerWebRequestInstanceCreator<TService> has been removed. The
		 WebRequestLifestyle can be used instead.

	Changes:
		-[Extensions/Core] Extensions library has been merged with core library. Extensions library is 
		 currently empty, but will still be used as NuGet package for backwards compatibility for existing
		 users.

	Bug fixes:
		-[Core] RegisterDecorator wrapped singletons twice. This was caused by the ExpressionBuilt event
		 that was triggered twice for singletons. (work item 19110)
		-[Core] Memory leak when using decorators with while creating many Container instances. (work item 
		 19241)
		-[Extensions.LifetimeScoping] Registration order of RegisterDecorator and RegisterLifetimeScope
		 mattered for the lifetime op the decorator. (work item 19120)
		-[Integration.Web] Registration order of RegisterDecorator and RegisterPerWebRequest mattered for the 
		 lifetime op the decorator. (work item 19120)
		-[Integration.Wcf] Registration order of RegisterDecorator and RegisterPerWcfOperation mattered for 
		 the lifetime op the decorator. (work item 19120)


Version 1.next (not released yet)
	General description:

	Bug fixes:
		-[Extensions] RegisterDecorator extension methods did not check whether the registered decorator type
		 contained a constructor argument that the type implemented. This allowed registration of decorators
		 that could never be used. (work item 18956)
		-[Extensions.LifetimeScoping] Registrations made using RegisterLifetimeScope could be invalidated by
		 other RegisterLifetimeScope registrations in case AllowOverridingRegistrations was set to true and
		 Verify was called in between. (work item 19119)


Version 1.6.1 (v1.6.1 RTM) 2012-12-12
	General description:
		The integration packages that were targetted at .NET 4.0 were incorrectly targetted at .NET 4.5. This
		was caused by a misconfiguration in the build script. This made it impossible to use those packages
		when .NET 4.5 was not installed.

