@@ -171,13 +171,13 @@ namespace SimpleInjector
         /// </summary>
         /// <remarks>
         /// <para>
-        /// A call to this method locks the container. No new registrations can be made after a call to this 
+        /// A call to this method locks the container. No new registrations can't be made after a call to this 
         /// method.
         /// </para>
         /// <para>
-        /// <b>Note:</b> This method is <i>not</i> guaranteed to always return the same <b>IInstanceProducer</b>
-        /// instance for a given <see cref="Type"/>. It will however either always return <b>null</b> or
-        /// always return a producer that is able to return the expected instance.
+        /// <b>Note:</b> This method is <i>not</i> guaranteed to always return the same 
+        /// <see cref="InstanceProducer"/> instance for a given <see cref="Type"/>. It will however either 
+        /// always return <b>null</b> or always return a producer that is able to return the expected instance.
         /// </para>
         /// </remarks>
         /// <param name="serviceType">The <see cref="Type"/> that the returned instance producer should produce.</param>
@@ -197,13 +197,13 @@ namespace SimpleInjector
         /// </summary>
         /// <remarks>
         /// <para>
-        /// A call to this method locks the container. No new registrations can be made after a call to this 
+        /// A call to this method locks the container. No new registrations can't be made after a call to this 
         /// method.
         /// </para>
         /// <para>
-        /// <b>Note:</b> This method is <i>not</i> guaranteed to always return the same <b>IInstanceProducer</b>
-        /// instance for a given <see cref="Type"/>. It will however either always return <b>null</b> or
-        /// always return a producer that is able to return the expected instance.
+        /// <b>Note:</b> This method is <i>not</i> guaranteed to always return the same 
+        /// <see cref="InstanceProducer"/> instance for a given <see cref="Type"/>. It will however either 
+        /// always return <b>null</b> or always return a producer that is able to return the expected instance.
         /// </para>
         /// </remarks>
         /// <param name="serviceType">The <see cref="Type"/> that the returned instance producer should produce.</param>
@@ -214,10 +214,10 @@ namespace SimpleInjector
         //// 7.1 DO NOT have public members that can either throw or not based on some option.
         public InstanceProducer GetRegistration(Type serviceType, bool throwOnFailure)
         {
-            // We must lock, because not locking could lead to incorrect behavior, since we are triggering the
-            // building of Expression trees here and allowing to change the container afterwards, could screw 
-            // up the complete registration.
-            this.LockContainer();
+            if (!this.locked)
+            {
+                this.LockContainer();
+            }
 
             var producer = this.GetRegistrationEvenIfInvalid(serviceType);
 
