@@ -146,7 +146,8 @@ namespace SimpleInjector
         }
 
         /// <summary>
-        /// Builds an expression that expresses the intent to get an instance by the current producer.
+        /// Builds an expression that expresses the intent to get an instance by the current producer. A call 
+        /// to this method locks the container. No new registrations can't be made after a call to this method.
         /// </summary>
         /// <returns>An Expression.</returns>
         public Expression BuildExpression()
